--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ nav {
     background-color: white;
     position: sticky;
     top: 0;
-    
 }
 
 nav .profile {
@@ -93,6 +92,24 @@ nav ul li:hover {
 .page-content .presentation-image img {
     max-width: 100%;
     height: auto; 
+}
+
+footer {
+	margin-top: 5%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	padding: 10px;
+	background-color: #000;
+	color: white;
+}
+footer .colonne p {
+	font-size: 12px;
+	color: #ccc;
+	cursor: pointer;
+}
+footer .colonne p:hover {
+	color: #fff;
 }
 
 
